# fastprint-test

./: .env.example  .gitignore  DATABASE_CONFIG.md  README.md  pyproject.toml  requirements.txt
config/: urls.py
config/settings/: base.py  local.py  production.py
products/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
products/management/commands/: import_porducts.py
products/migrations/: 0001_initial.py
products/services/: api_client.py  import_products.py
products/tests/: test_api_client.py
templates/: base.html
templates/products/: produk_confirm_delete.html  produk_detail.html  produk_form.html  produk_list.html
