[project]
name = "fastprint-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-crispy-forms>=2.5",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[dependency-groups]
dev-formatting = [
    "black>=26.1.0",
    "ruff>=0.14.14",
]
tests = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
